<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" tools:ignore="MissingTranslation">
    <string name="app_name" translatable="false">Fenrir VK</string>
    <string-array name="array_language_names">
        <item>Default</item>
        <item>English</item>
        <item>Russian</item>
    </string-array>
    <string-array name="array_language_items" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="array_end_list_anim_names">
        <item>Success</item>
        <item>Balls</item>
        <item>Wave</item>
    </string-array>
    <string-array name="array_end_list_anim_items" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="array_chat_background_names">
        <item>Monotone</item>
        <item>Cookies</item>
        <item>Lines</item>
        <item>Runes</item>
        <item>Custom…</item>
    </string-array>
    <string-array name="array_chat_background_items" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="array_lifecycle_names">
        <item>1 min.</item>
        <item>2 min.</item>
        <item>5 min.</item>
        <item>10 min.</item>
        <item>15 min.</item>
    </string-array>
    <string-array name="array_lifecycle_items" translatable="false">
        <item>60000</item>
        <item>120000</item>
        <item>300000</item>
        <item>600000</item>
        <item>900000</item>
    </string-array>
    <string-array name="array_ffmpeg_names">
        <item>Off</item>
        <item>Enabled</item>
        <item>Primary</item>
    </string-array>
    <string-array name="array_ffmpeg_items" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="preview_preview_size" translatable="false">
        <item>S: 75 px</item>
        <item>M: 130 px</item>
        <item>X: 604 px</item>
        <item>Y: 807 px</item>
        <item>Z: 1280 px</item>
    </string-array>
    <string-array name="preview_preview_size_values" translatable="false">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="array_photo_rounded_names">
        <item>Always rounded</item>
        <item>Rounded if one photo</item>
        <item>Not rounded</item>
    </string-array>
    <string-array name="array_photo_rounded_items" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="array_font_size_names">
        <item>Default</item>
        <item>Small</item>
        <item>Average</item>
        <item>Large</item>
        <item>Huge</item>
    </string-array>
    <string-array name="array_font_size_items" translatable="false">
        <item>0</item>
        <item>-1</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="array_news_start_updates_names">
        <item>Disable</item>
        <item>Update</item>
        <item>Ask</item>
    </string-array>
    <string-array name="array_news_start_updates_items" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="array_swipes_chats_names">
        <item>Disable</item>
        <item>Slidr</item>
    </string-array>
    <string-array name="array_swipes_chats_items" translatable="false">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string-array name="array_donate_anim_names">
        <item>Disable</item>
        <item>Lines</item>
        <item>Fire Ring</item>
    </string-array>
    <string-array name="array_donate_anim_items" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="array_pager_transform_names" translatable="false">
        <item>Off</item>
        <item>Depth Transformer</item>
        <item>Zoom Out Transformer</item>
        <item>Clock Spin Transformer</item>
        <item>Background To Foreground Transformer</item>
        <item>Cube In Depth Transformer</item>
        <item>Fan Transformer</item>
        <item>Gate Transformer</item>
        <item>Slider Transformer</item>
    </string-array>
    <string-array name="array_pager_transform_anim_items" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    <string-array name="array_pagan_symbol_names">
        <item>Disabled.</item>
        <item>Cat</item>
        <item>Yggdrasil</item>
        <item>Valknut</item>
        <item>Mjolnir</item>
        <item>Vegvisir</item>
        <item>Celtic knot</item>
        <item>Slepnir</item>
        <item>Fenrir</item>
        <item>Triskel</item>
        <item>Hel</item>
        <item>Fire</item>
        <item>Fire Fan</item>
        <item>Odin</item>
    </string-array>
    <string-array name="array_pagan_symbol_items" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
    </string-array>
    <string-array name="array_accounts_input">
        <item>VK Android</item>
        <item>Kate</item>
        <item>Hidden VK Android</item>
        <item>Hidden kate</item>
    </string-array>
    <string-array name="array_sex">
        <item>Female</item>
        <item>Male</item>
    </string-array>
    <string-array name="player_progress_state" translatable="false">
        <item> ••••••</item>
        <item>• •••••</item>
        <item>•• ••••</item>
        <item>••• •••</item>
        <item>•••• ••</item>
        <item>••••• •</item>
        <item>•••••• </item>
    </string-array>
    <string name="developer">Developer: Umerov Artyom</string>
    <string name="helped_developer">Helped: Danilyuk Dmitry</string>
    <string name="first_pagan">First pagan</string>
    <string name="repo">Repository: https://github.com/umerov1999/Fenrir-for-VK</string>
    <string name="repo_local_server">Repository: https://github.com/umerov1999/FenrirMediaServer/releases</string>
    <string name="is_donated">Donate for verification</string>
    <string name="is_donated_alert">Not included in the full version, only visible in this client. Cost for a page - %1$d₽, for a group - %2$d₽. Write to the developer\'s mail</string>
    <string name="is_donated_alert_disabled">Option disabled</string>
    <string name="project_dedicated_summary">Project Dedicated for Arnoldova Ekaterina, https://vk.com/id255645173</string>
    <string name="project_dedicated">Project Dedicated</string>
    <string name="go_buy" translatable="false">Google Play</string>
    <string name="in_full_version">Available in full version!</string>
    <string name="features">Features:</string>
    <string name="features_full">
        Features:
        \n
        \n1. Downloading music
        \n2. Download video
        \n3. Downloading voice
        \n4. Downloading Stickers
        \n5. Sending your stickers
        \n6. Downloading correspondence
        \n7. Mentions
        \n8. Hide chats (hold the pencil button to show hidden ones)
        \n9. Products
        \n10. All photo comments
        \n11. Change icon (Android >= 8.1)
        \n12. Local media server
        \n13. Player background settings.</string>
    <string name="dialogs">Dialogs</string>
    <string name="dialog_day_today">Today</string>
    <string name="dialog_day_yesterday">Yesterday</string>
    <string name="dialog_day_ten_days">For 10 days</string>
    <string name="dialog_pinned">Pinned</string>
    <string name="dialog_day_older">Old</string>
    <string name="dialog_me">I</string>
    <string name="attachments">[attachments]</string>
    <string name="sticker_message">[sticker]</string>
    <string name="voice_message">[audio message]</string>
    <string name="audio_message">[audio]</string>
    <string name="call_message">[call]</string>
    <string name="doc_message">[document]</string>
    <string name="gift_message">[gift]</string>
    <string name="graffity_message">[graffiti]</string>
    <string name="photo_message">[photo]</string>
    <string name="video_message">[video]</string>
    <string name="wall_message">[repost]</string>
    <string name="forward_messages">[forwarded]</string>
    <string name="forward_messages_view">FORWARDED</string>
    <string name="service_message">[service]</string>
    <string name="title_messages">Messages</string>
    <string name="settings">Settings</string>
    <string name="general_settings">Commons</string>
    <string name="about_settings">About application</string>
    <string name="account_cache_cleaner">Clear cache and sql</string>
    <string name="cache_cleaner">Clear cache</string>
    <string name="ui_cache_cleaner">Clear only UI</string>
    <string name="go_to_dialog">To dialog</string>
    <string name="send">Send</string>
    <string name="text_hint">Message</string>
    <string name="search_hint">Find</string>
    <string name="sending">Sending</string>
    <string name="in_order">In queue</string>
    <string name="error">Error</string>
    <string name="friends">Friends</string>
    <string name="sending_message_failed">Message sending failed</string>
    <string name="try_again">Repeat</string>
    <string name="delete">Delete</string>
    <string name="delete_from_playlist">Remove from playlist</string>
    <string name="select_attachments">Select attachments</string>
    <string name="attachment_wall_post">Recording</string>
    <string name="attachment_document">Document</string>
    <string name="attachment_documents">Documents</string>
    <string name="attachment_link">Link</string>
    <string name="user_type_message">typing message</string>
    <string name="user_type_voice">typing voice</string>
    <string name="many_users_typed">%1$s and %2$d persons</string>
    <string name="load_more">Load more</string>
    <string name="last_seen_sex_man">was: %1$s</string>
    <string name="last_seen_sex_woman">was: %1$s</string>
    <string name="last_seen_sex_unknown">was: %1$s</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="offline_hidden">Offline: hidden</string>
    <string name="notif_setting_title">Notifications</string>
    <string name="messages_in_dialogs_tite">Messages in dialogs</string>
    <string name="enable_dialogs_notif_title">Enable notifications</string>
    <string name="enable_dialogs_sound_title">Sound</string>
    <string name="enable_dialogs_vibro_title">Vibration</string>
    <string name="enable_dialogs_led_title">LED</string>
    <string name="messages_in_groupchat_tite">Messages in group chat</string>
    <string name="enable_groupchat_notif_title">Enable notifications</string>
    <string name="enable_groupchat_sound_title">Sound</string>
    <string name="high_notif_priority_title">High priority notifications</string>
    <string name="copy_data">Copy</string>
    <string name="forward">Forward</string>
    <string name="recording_time">Recording… %1$s</string>
    <string name="pause">paused</string>
    <string name="close">Closed</string>
    <string name="attach">Attach</string>
    <string name="emoji" translatable="false">Emoij</string>
    <string name="keyboard">Keyboard</string>
</resources>