<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/enable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="false"
        android:padding="8dp"
        android:text="@string/enable_groupchat_notif_title"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="@dimen/font_size_title" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/priority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="false"
        android:padding="8dp"
        android:text="@string/high_notif_priority_title"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="@dimen/font_size_title" />


    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/sound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="false"
        android:padding="8dp"
        android:text="@string/enable_dialogs_sound_title"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="@dimen/font_size_title" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/vibro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="false"
        android:padding="8dp"
        android:text="@string/enable_dialogs_vibro_title"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="@dimen/font_size_title" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/led"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="false"
        android:padding="8dp"
        android:text="@string/enable_dialogs_led_title"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="@dimen/font_size_title" />

</LinearLayout>