<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/forward"
        android:icon="@drawable/ic_outline_forward"
        android:showAsAction="always"
        android:title="@string/forward"
        app:iconTint="?colorOnSurface"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/copy"
        android:icon="@drawable/content_copy"
        android:showAsAction="always"
        android:title="@string/copy_data"
        app:iconTint="?colorOnSurface"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_outline_delete"
        android:showAsAction="always"
        android:title="@string/delete"
        app:iconTint="?colorOnSurface"
        tools:ignore="AppCompatResource" />
</menu>