<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/fragment_chat">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorSurface"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/fragment_input_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/buttonSend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/message_input_container"
                android:layout_alignParentEnd="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/send"
                android:padding="14dp"
                android:scaleType="centerCrop"
                android:src="@drawable/send"
                app:tint="?colorPrimary" />

            <LinearLayout
                android:id="@+id/message_input_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/buttonSend"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/buttonAttach"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/attach"
                    android:padding="14dp"
                    android:src="@drawable/attachment"
                    app:tint="?colorOnSurface" />

                <TextView
                    android:id="@+id/fragment_input_att_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="-8dp"
                    android:layout_marginBottom="4dp"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                    tools:text="4" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    app:cardBackgroundColor="?messages_background_color"
                    app:cardCornerRadius="24dp"
                    app:cardElevation="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/buttonEmoji"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:contentDescription="@string/emoji"
                            android:padding="10dp"
                            android:src="@drawable/emoticon"
                            app:tint="?colorOnSurface" />

                        <dev.ragnarok.fenrir.view.emoji.EmojiconEditText
                            android:id="@+id/fragment_input_text"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@android:color/transparent"
                            android:hint="@string/text_hint"
                            android:imeOptions="flagNoExtractUi"
                            android:importantForAutofill="no"
                            android:inputType="text|textCapSentences|textMultiLine"
                            android:maxLines="8"
                            android:minHeight="40dp"
                            android:paddingStart="0dp"
                            android:paddingTop="4dp"
                            android:paddingEnd="8dp"
                            android:paddingBottom="4dp"
                            android:saveEnabled="false"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                            android:textColorHint="?android:textColorHint"
                            app:emojiconSize="20sp" />

                        <ImageView
                            android:id="@+id/buttonBotKeyboard"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:contentDescription="@string/keyboard"
                            android:padding="10dp"
                            android:src="@drawable/ic_keyboard_bots"
                            android:visibility="gone"
                            app:tint="?colorOnSurface" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/voice_input_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:minHeight="48dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/cancel_voice_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/close"
                    android:padding="12dp"
                    android:src="@drawable/close"
                    app:tint="?attr/colorOnSurface" />

                <ImageView
                    android:id="@+id/pause_voice_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/pause"
                    android:padding="12dp"
                    android:src="@drawable/pause"
                    app:tint="?colorOnSurface" />

                <TextView
                    android:id="@+id/recording_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"

                    android:text="@string/recording_time" />

            </LinearLayout>
        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/fragment_input_keyboard_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:colorBackground"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/fragment_input_emoji_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:colorBackground"
            android:orientation="horizontal"
            android:visibility="gone" />

    </LinearLayout>
</merge>
